Fixed load in layout container misalignment issue

--- a/src/styles/layout/_layout.scss
+++ b/src/styles/layout/_layout.scss
@@ -15,23 +15,23 @@ header, main {
 @media(min-width: 971px){
     @keyframes spawn-from-left {
         from {
-          opacity: 0;
-          transform: translateY(-100px);
+            opacity: 0;
+            transform: translateX(-100px);
         }
         to {
           opacity: 1;
-          transform: translateY(0px);
+          transform: translateX(0px);
         }
     }
     
     @keyframes spawn-from-right {
         from {
           opacity: 0;
-          transform: translateY(100px);
+          transform: translateX(100px);
         }
         to {
           opacity: 1;
-          transform: translateY(0px);
+          transform: translateX(0px);
         }
     }
 }
