--- a/src/styles/layout/_project-item.scss
+++ b/src/styles/layout/_project-item.scss
@@ -66,10 +66,12 @@
     border-radius: 10000px;
     border: 1px solid white;
     color: white;
-    transition: 0.25s;
+    transition: 0.3s;
 }
 
 #view-all-projects:hover {
-    background-color: rgba(0, 0, 0, 0.2);
+    background-color: rgba(0, 0, 0, 0.151);
+    border: 1px solid rgba(255, 255, 255, 0.75);
+    box-shadow: 0 0 9px 9px rgba(0, 0, 0, 0.128);
     cursor: pointer;
 }
